--- a/File_explorer/MainWindow.xaml
+++ b/File_explorer/MainWindow.xaml
@@ -13,6 +13,7 @@
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
@@ -35,10 +36,33 @@
             </Button>
         </Grid>
 
+        <Grid Grid.Row="1">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+
+            <Button Content="&lt;-" 
+                    Grid.Column="0"
+                    Command="{Binding MoveBackCommand}" 
+                    ToolTip="Move Back"/>
+            <Button Content="-&gt;"
+                    Grid.Column="1"
+                    Command="{Binding MoveForwardCommand}"
+                    ToolTip="Move Forward"/>
+            <Button Content="O"
+                    Grid.Column="2" 
+                    Command="{Binding RefreshCommand}"
+                    ToolTip="Refresh (F5)"/>
+            <TextBox Text="{Binding FilePath}" Grid.Column="3"/>
+        </Grid>
+
         <DataGrid ItemsSource="{Binding DirectoriesAndFiles}" SelectedItem="{Binding SelectedEntity}"
                   AutoGenerateColumns="False" IsReadOnly="True" VirtualizingPanel.VirtualizationMode="Recycling" 
                   VirtualizingPanel.IsVirtualizing="True" BorderThickness="1" HeadersVisibility="Column"
-                  Grid.Row="1" Padding="20 5"  GridLinesVisibility="None">
+                  Grid.Row="2" Padding="20 5"  GridLinesVisibility="None">
             <b:Interaction.Triggers>
                 <b:EventTrigger EventName="MouseDoubleClick">
                     <b:InvokeCommandAction
