--- a/File_explorer/MainWindow.xaml
+++ b/File_explorer/MainWindow.xaml
@@ -56,7 +56,7 @@
                     Grid.Column="2" 
                     Command="{Binding RefreshCommand}"
                     ToolTip="Refresh (F5)"/>
-            <TextBox Text="{Binding FilePath}" Grid.Column="3"/>
+            <TextBox Text="{Binding FilePath}" IsReadOnly="True" Grid.Column="3"/>
         </Grid>
 
         <DataGrid ItemsSource="{Binding DirectoriesAndFiles}" SelectedItem="{Binding SelectedEntity}"
